# eagle_management

./: # Eagle PM - Stack + Estrutura de Arquiv.md  .gitignore  Eagle_PM_Requisitos_Completos.md  README.md  eagle_planning.bat  eagle_pm.db  pyproject.toml
eagle_planning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eagle_pm/app/: crud.py  db.py  export.py  main.py  models.py  routes.py  rules.py
eagle_pm/app/static/: app.css  app.js
eagle_pm/app/templates/: activities.html  activity_edit.html  base.html  components.html  daily_meeting.html  member_edit.html  members.html  project_control.html  project_edit.html  projects.html  release_edit.html  release_scope.html  releases.html
